--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Color Game</title>
-	<link rel="stylesheet" type="text/css" href="colorGame.css">
+	<title>Colour Game</title>
+	<link rel="stylesheet" type="text/css" href="colourGame.css">
 </head>
 <body>
 <h1>
@@ -22,6 +22,6 @@
 	<div class="square"></div>
 </div>
 
-<script type="text/javascript" src="colorGame.js"></script>
+<script type="text/javascript" src="colourGame.js"></script>
 </body>
 </html>
