--- a/index.html
+++ b/index.html
@@ -5,23 +5,30 @@
 	<link rel="stylesheet" type="text/css" href="colourGame.css">
 </head>
 <body>
-<h1>
-	The Great <span id="colorDisplay">RGB</span> Color Game
-</h1>
-
-<div>
-	<span id="message"></span>
-</div>
-
-<div id="container">
-	<div class="square"></div>
-	<div class="square"></div>
-	<div class="square"></div>
-	<div class="square"></div>
-	<div class="square"></div>
-	<div class="square"></div>
-</div>
-
-<script type="text/javascript" src="colourGame.js"></script>
-</body>
-</html>
+	<h1>
+		The Great 
+		<br>
+		<span id="colorDisplay">RGB</span> 
+		<br>
+		Colour Game
+	</h1>
+	
+	<div id="stripe">
+		<button id="reset">New Colours</button>
+		<span id="message"></span>
+		<button class="mode">Easy</button>
+		<button class="mode selected">Hard</button>
+	</div>
+	
+		<div id="container">
+			<div class="square"></div>
+			<div class="square"></div>
+			<div class="square"></div>
+			<div class="square"></div>
+			<div class="square"></div>
+			<div class="square"></div>
+		</div>
+	
+	<script type="text/javascript" src="colorGame.js"></script>
+	</body>
+	</html>
