--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
 			<div class="square"></div>
 		</div>
 	
-	<script type="text/javascript" src="colorGame.js"></script>
+	<script type="text/javascript" src="colourGame.js"></script>
 	</body>
 	</html>
